--- a/SpeelVeld.html
+++ b/SpeelVeld.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <img src="img/lj38i4ximogx.png" alt="lingo" id="logo">
-        <form>
-            <input id="input" placeholder="Voer een woord in" type="text">
-            <button id="submit" type="button">Submit</button>
-        </form>
+        <div id="form">
+            <input id="Input" maxlength="5" placeholder="Voer een woord in" type="text">
+            <button id="knop">Submit</button>
+        </div>
         <div id="SpeelVeld">  
         </div>
         <script type="module" src="javascript/lingo.js"></script>
