--- a/SpeelVeld.html
+++ b/SpeelVeld.html
@@ -7,7 +7,7 @@
     <body>
         <img src="img/lj38i4ximogx.png" alt="lingo" id="logo">
         <div id="form">
-            <input id="Input" maxlength="5" placeholder="Voer een woord in" type="text">
+            <input id="Input" maxlength="5" minlength="5" placeholder="Voer een woord in" type="text">
             <button id="knop">Submit</button>
         </div>
         <div id="SpeelVeld">  
